Mandatory build 126: - Lots of minor and very minor fixes inspired by FindBugs. Includes some synchronization changes. - Logging - Improve toString() on InsertHandler, InsertSender, RequestSender, RequestHandler (for better logging) - Don't randomize own location unless we haven't had a successful swap in 30 seconds - give other side time to notify us of change. - Catch Throwables thrown in TMCI, and log them.
git-svn-id: file:///home/toad/git-migration/temprepository/trunk/freenet@7390 67a373e5-eb02-0410-a15c-ee090a768436